--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+# Moodify Streamlit Cloud requirements
 streamlit==1.28.0
-tensorflow==2.13.0
-numpy==1.26.0
+tensorflow-cpu==2.13.0
+numpy==1.24.3
 pillow==10.1.0
-opencv-python==4.8.0.76
+opencv-python-headless==4.8.0.76
 matplotlib==3.8.0
 scikit-learn==1.3.0
